--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Detona Ralph</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
     
-</body>
+    <link rel="stylesheet" href="src/css/styles.css">
+  </head>
+  <body>
+    <div class="container">
+        <div class="menu">
+            <div class="menu-time">
+                <h2 class="menu-title">Time Left</h2>
+                <h2>0</h2>
+            </div>
+            <div class="menu-score">
+                <h2 class="menu-title">Your score</h2>
+                <h2>0</h2>
+            </div>
+            <div class="menu-lives">
+                <img src="" alt="">
+                <h2>x3</h2>
+            </div>
+                
+        </div>
+
+        <div class="panel">
+            <div class="panel-row">
+                <div class="square" id="1"></div>
+                <div class="square" id="2"></div>
+                <div class="square" id="3"></div>
+            </div>
+
+            <div class="panel-row">
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
+                <div class="square" id="6"></div>
+            </div>
+
+            <div class="panel-row">
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
+                <div class="square" id="9"></div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+    <script defer src="src/scripts/engenie.js"></script>
+  </body>
 </html>
